# web-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run_mcp_docker.sh
web_mcp/: __init__.py  cli.py  fastmcp_server.py
