[project]
name = "web-mcp"
version = "0.1.0"
description = "A CLI tool to search the web using multiple engines"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "curl-cffi>=0.5.10",
    "typer>=0.9.0",
    "beautifulsoup4>=4.9.0",
    "requests>=2.25.0",
    "pydantic>=2.0.0",
    "fastmcp>=0.1.0",
    "lxml>=4.6.0",  # For HTML parsing
    "readability-lxml>=0.8.1",  # For extracting readable content from web pages
]

[project.scripts]
web-search = "web_mcp.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"